<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_syncronize"
        android:title="@string/action_synchronize"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_cached_white_36dp"/>

    <item android:id="@+id/action_sort"
        android:title="@string/action_sort"
        app:showAsAction="never">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_name"
                    android:title="@string/action_sort_name" />
                <item
                    android:id="@+id/action_sort_id"
                    android:title="@string/action_sort_id" />
                <item
                    android:id="@+id/action_sort_status"
                    android:title="@string/action_sort_status"
                    android:checked="true"/>
                <item
                    android:id="@+id/action_sort_date_of_creation"
                    android:title="@string/action_sort_date_of_creation" />
                <!--<item-->
                    <!--android:id="@+id/action_sort_last_modified"-->
                    <!--android:title="@string/action_sort_last_modified" />-->
            </group>
        </menu>
    </item>
</menu>
