<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CaseActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_attach"
        android:title="@string/action_attach"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_attachment_2_white_18dp"/>

    <item android:id="@+id/action_syncronize"
        android:title="@string/action_synchronize"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_cached_white_36dp"/>


</menu>
