<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:nestedScrollingEnabled="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="at.tuwien.telemedizin.dermadoc.app.activities_fragments.create_case.EditSymptomsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/selection_root_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:id="@+id/physician_help_icon_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/ic_action_help_holo_light_18dp" />

                    <TextView
                        android:id="@+id/edit_physician_section_header"
                        style="@style/NewCaseMainHeaderText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@id/physician_help_icon_view"
                        android:text="@string/label_physician_selection_section_header" />

                    <TextView
                        android:id="@+id/physician_help_hint_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/edit_physician_section_header"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/hint_background"
                        android:padding="5dp"
                        android:text="@string/hint_edit_physician_description"
                        android:textAppearance="@style/HintText"
                        android:visibility="gone" />

                </RelativeLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/next_available_physician_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/option_next_available_physician" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_nearby_physicians" />

            <RadioGroup
                android:id="@+id/nearby_physician_list_linlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:paddingTop="15dp">

            </RadioGroup>


        </LinearLayout>
        <!-- relative layout to align the next-button to the bottom -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/next_section_button"
                style="@style/EditCaseNextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/label_next_page" />

        </RelativeLayout>


    </LinearLayout>
</ScrollView>