<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="at.tuwien.telemedizin.dermadoc.app.activities_fragments.case_specific.CaseOverviewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/case_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="18dp"
            android:text="New Text"
            android:textSize="20sp" />


        <include
            layout="@layout/case_overview_info_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/basic_case_notification_header"
            style="@style/HeaderLevel2Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/header_case_notification_infos" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- hold the notification listLayout and the button to delte the notifications -->


            <LinearLayout
                android:id="@+id/notification_list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_delete_notifications"
                android:id="@+id/notifications_delete_button" />


        </LinearLayout>

        <TextView
            android:id="@+id/basic_case_data_header"
            style="@style/HeaderLevel2Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/header_case_basic_infos" />


        <LinearLayout
            android:id="@+id/basic_data_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </LinearLayout>

        <TextView
            android:id="@+id/element_header_textView"
            style="@style/OverviewTableTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/label_localizations" />

        <RelativeLayout
            android:id="@+id/location_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-25dp">
            <!-- this relative layout is used to nest a fragment dynamically -->
        </RelativeLayout>


    </LinearLayout>

</ScrollView>
