<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_help_layout"
    tools:context="at.tuwien.telemedizin.dermadoc.app.activities_fragments.help.HelpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_explanation" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="6dp"
                android:src="@drawable/ic_action_help_holo_light_18dp" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="6dp"
                android:src="@drawable/ic_action_help_yellow_dark_18dp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_regards_from_the_team"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_regards_your_team"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_margin="6dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/derma_doc_icon_big_1"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>
